<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:background="@drawable/gradient_background"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="15dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/noida"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/baseline_location_on_24"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/Btn_loader"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/weather" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/_17"
            android:textColor="@color/white"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="@+id/Btn_loader"
            app:layout_constraintStart_toStartOf="@+id/Btn_loader"
            app:layout_constraintTop_toBottomOf="@+id/Btn_loader" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/fog_10_18_air_quality_115_moderate"
            android:textColor="@color/white"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thunderstorm"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#808080"
            android:elevation="0dp"
            android:outlineSpotShadowColor="@color/white"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_chainStyle="packed"
            tools:targetApi="p">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="25dp"
                    android:id="@+id/ivFlower"
                    android:src="@drawable/tulip"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:tint="@color/white"
                    android:layout_height="20dp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high_pollen_count"
                    android:layout_toEndOf="@id/ivFlower"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_medium"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:backgroundTint="#808080"
            android:elevation="0dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView3"
            app:layout_constraintTop_toBottomOf="@+id/cardView">
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="10dp"
                tools:listitem="@layout/today_temperature"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:id="@+id/rvTodayTemperature"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#808080"
            android:elevation="0dp"
            android:layout_marginBottom="50dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                tools:listitem="@layout/week_temperature_rv"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:id="@+id/rvWeekTemperature"/>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>